--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <h1>Berdan Sarigol's Portfolio</h1>
         <h2>I am a web developer.</h2>
         <hr/>
-        <h3><a href="./mytop3movies.html">My Top Three Movies</a></h3>
-        <img src="./assets/images/top3.png" height="200" alt="Top Three Movies">
-        <h3><a href="./birthdayinvite.html">My Birthday Invitation</a></h3>
-        <img src="./assets/images/birthday.png" height="200" alt="Birthday Invitation">
+       <h2>Things About Me:</h2>
+        <p>I am a 26 (soon to be 27) year old Environmental Engineering Dropout. I'm currently living in Bodrum, a touristic seaside town in the Aegean part of Turkey. I can do so much things: Drawing with AutoCAD, making music with various DAW's (currently trying to get one), make a website from scratch with HTML5, CSS and JavaScript. Nowadays I'm studying remotely in Istanbul University for Political Science and Public Administration but in any trade or job, I want to do things differently, efficiently and creatively. I currently have three books that are live in Google Play Books, and the fourth one will come eventually.</p>
         <hr/>
         <a href="./about.html">About Me</a>
         <hr/>
