--- a/mycv.html
+++ b/mycv.html
@@ -2,8 +2,34 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Berdan Sarıgöl</title>
+        <title>Berdan Sarıgöl's CV</title>
     </head>
     <body>
-        <h1></h1>
+        <img src="" height="200" alt="Me">
+        <h1>Berdan Sarıgöl</h1>
+        <h2>Summary</h2>
+        <p>My name is Berdan Sarıgöl. I'm an Environmental Engineering dropout from Yıldız Technical University in Istanbul. Despite my lack of degrees, I can still do many things: I can draw with AutoCAD, I can write fiction and non-fiction pieces, I can code with Python, MATLAB, HTML5, CSS and JavaScript, and I know computer programs such as Microsoft Office and ElektraWeb. I can adapt and learn quickly. My communication skills are actually good despite being a little bit introverted, and I am a strong team player who would hurt himself before letting enyone down.</p>
+        <h2>Previous Work Experiences</h2>
+        <ul>
+            <li><h3>Sales Representative</h3><p>Ebebek Bodrum Midtown Store</p><p>August 2025-Ongoing</p></li>
+            <li><h3>Receptionist</h3><p>Mare Marin Boutique Hotel</p><p>April 2025-June 2025</p></li>
+            <li><h3>Stock Control Personnel</h3><p>Mr DIY Bodrum Turgutreis Store</p><p>February 2025-April 2025</p></li>
+            <li><h3>Sales Representative</h3><p>Bodrum Sea Lines</p><p>May 2024-July 2024</p></li>
+            <li><h3>Writer</h3><p>Geekyapar.com</p><p>November 2019-March 2020</p></li>
+        </ul>
+        <h2>Education</h2>
+        <ul>
+            <li><h3>Istanbul University</h3><p>Political Science and Public Administration</p><p>October 2025-Ongoing</p></li>
+            <li><h3>Yıldız Technical University</h3><p>Environmental Engiineering</p><p>September 2016-Dropped out</p></li>
+            <li><h3>Bodrum Anadolu Lisesi</h3><p>September 2012-June 2016</p></li>
+        </ul>
+        <h2>Languages</h2>
+        <ul>
+            <li>Turkish (Native)</li>
+            <li>English (C1)</li>
+            <li>German (A2)</li>
+        </ul>
+        <h2>Skills</h2>
+        <p></p>
     </body>
+    <footer>2025, Berdan Sarıgöl</footer>
