Add link to detailed CV in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <hr/>
        <h2>Things About Me:</h2>
         <p>I am a 26 (soon to be 27) year old Environmental Engineering Dropout. I'm currently living in Bodrum, a touristic seaside town in the Aegean part of Turkey. I can do so much things: Drawing with AutoCAD, making music with various DAW's (currently trying to get one), make a website from scratch with HTML5, CSS and JavaScript. Nowadays I'm studying remotely in Istanbul University for Political Science and Public Administration but in any trade or job, I want to do things differently, efficiently and creatively. I currently have three books that are live in Google Play Books, and the fourth one will come eventually.</p>
+        <p><a href=".mycv.html">If you're interested, you can read my detailed CV here.</a></p>
         <hr/>
         <a href="./books.html">My Books</a>
         <hr/>
