Update CV with new work experience and skills

--- a/mycv.html
+++ b/mycv.html
@@ -9,6 +9,7 @@
         <h1>Berdan Sarıgöl</h1>
         <h2>Summary</h2>
         <p>My name is Berdan Sarıgöl. I'm an Environmental Engineering dropout from Yıldız Technical University in Istanbul. Despite my lack of degrees, I can still do many things: I can draw with AutoCAD, I can write fiction and non-fiction pieces, I can code with Python, MATLAB, HTML5, CSS and JavaScript, and I know computer programs such as Microsoft Office and ElektraWeb. I can adapt and learn quickly. My communication skills are actually good despite being a little bit introverted, and I am a strong team player who would hurt himself before letting enyone down.</p>
+        <hr/>
         <h2>Previous Work Experiences</h2>
         <ul>
             <li><h3>Sales Representative</h3><p>Ebebek Bodrum Midtown Store</p><p>August 2025-Ongoing</p></li>
@@ -17,19 +18,37 @@
             <li><h3>Sales Representative</h3><p>Bodrum Sea Lines</p><p>May 2024-July 2024</p></li>
             <li><h3>Writer</h3><p>Geekyapar.com</p><p>November 2019-March 2020</p></li>
         </ul>
+        <hr/>
         <h2>Education</h2>
         <ul>
             <li><h3>Istanbul University</h3><p>Political Science and Public Administration</p><p>October 2025-Ongoing</p></li>
             <li><h3>Yıldız Technical University</h3><p>Environmental Engiineering</p><p>September 2016-Dropped out</p></li>
             <li><h3>Bodrum Anadolu Lisesi</h3><p>September 2012-June 2016</p></li>
         </ul>
+        <hr/>
         <h2>Languages</h2>
         <ul>
             <li>Turkish (Native)</li>
             <li>English (C1)</li>
             <li>German (A2)</li>
         </ul>
+        <hr/>
         <h2>Skills</h2>
-        <p></p>
+        <ul>
+            <li>Creative Writing</li>
+            <li>Web Software</li>
+            <li>Web Design</li>
+            <li>Programming in Python, HTML5, CSS and JavaScript</li>
+            <li>AutoCAD</li>
+            <li>Microsoft Office</li>
+        </ul>
+        <hr/>
+        <h2>References</h2>
+        <ul>
+            <li><h3>Demet Yasdur</h3><p>Mare Marin Boutique Hotel Front Office Manager</p><p>E-mail:info@maremarinhotel.com</p><p>Phone:+90 (905) 526 6066</p></li>
+            <li><h3>Doğan Göktaş</h3><p>Mr DIY Bodrum Turgutreis Store Manager</p><p>E-mail:goktasdogan1@gmail.com</p><p>Phone:+90 (537) 690 0236</p></li>
+        </ul>
+        <hr/>
+        <h2><a href="./contact.html">My Contact Info</a></h2>
     </body>
     <footer>2025, Berdan Sarıgöl</footer>
