Update image source in mycv.html

--- a/mycv.html
+++ b/mycv.html
@@ -5,7 +5,7 @@
         <title>Berdan Sarıgöl's CV</title>
     </head>
     <body>
-        <img src="" height="200" alt="Me">
+        <img src="../assets/images/IMG_20240627_213331.jpg" height="200" alt="Me">
         <h1>Berdan Sarıgöl</h1>
         <h2>Summary</h2>
         <p>My name is Berdan Sarıgöl. I'm an Environmental Engineering dropout from Yıldız Technical University in Istanbul. Despite my lack of degrees, I can still do many things: I can draw with AutoCAD, I can write fiction and non-fiction pieces, I can code with Python, MATLAB, HTML5, CSS and JavaScript, and I know computer programs such as Microsoft Office and ElektraWeb. I can adapt and learn quickly. My communication skills are actually good despite being a little bit introverted, and I am a strong team player who would hurt himself before letting enyone down.</p>
