Fix image paths in books.html

--- a/books.html
+++ b/books.html
@@ -7,11 +7,11 @@
     <body>
         <h2>I have Three Books and The Fourth One Is Coming:</h2>
         <ul>
-            <li><img src="../assets/images/atl1fc.jpg" height="200" alt="Atlantropa:The First Book Front Cover"/></li>
+            <li><img src="./assets/images/atl1fc.jpg" height="200" alt="Atlantropa:The First Book Front Cover"/></li>
             <li><a href="https://play.google.com/store/books/details?id=uzBVEAAAQBAJ&pli=1">Atlantropa: The First Book</a></li>
-            <li><img src="../assets/images/atl2fc.jpg" height="200" alt="Atlantropa:The Second Book Front Cover"/></li>
+            <li><img src="./assets/images/atl2fc.jpg" height="200" alt="Atlantropa:The Second Book Front Cover"/></li>
             <li><a href="https://play.google.com/store/books/details?id=apluEAAAQBAJ">Atlantropa: The Second Book</a></li>
-            <li><img src="../assets/images/atl3fc.jpg" height="200" alt="Atlantropa:The Third Book Front Cover"/></li>
+            <li><img src="./assets/images/atl3fc.jpg" height="200" alt="Atlantropa:The Third Book Front Cover"/></li>
             <li><a href="https://play.google.com/store/books/details?id=5n6AEQAAQBAJ">Atlantropa: The Third Book</a></li>
             <li>Fourth Book Will Come When It's Ready, Stay Tuned!</li>
         </ul>
@@ -19,6 +19,7 @@
     </body>
 
 </html>
+
 
 
 
