--- a/books.html
+++ b/books.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles.css"/>
         <title>My Books</title>
     </head>
     <body>
@@ -19,6 +20,7 @@
     </body>
 
 </html>
+
 
 
 
