--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <style src="./styles.css"/>
         <title>Berdan's Portfolio</title> 
     </head>
     <body>
