--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <style>rel="stylesheet" href="./styles.css"</style> 
+        <style>rel="stylesheet" href="./index-styles.css"</style> 
         <title>Berdan's Portfolio</title> 
     </head>
     <body>
