--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link>rel="stylesheet" href="./index-styles.css"</link> 
+        <link rel="stylesheet" href="./index-styles.css" /> 
         <title>Berdan's Portfolio</title> 
     </head>
     <body>
