Update books.html with inline styles and background color
Added inline styles for background color and text alignment.

--- a/books.html
+++ b/books.html
@@ -2,7 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./books-styles.css"/>
+        <link rel="stylesheet" href="./styles.css"/>
+        <style>
+            body {
+  background-color: #fca903;
+  font-color: #f3f7d2;
+  text-align: center;
+}
+        </style>
         <title>My Books</title>
     </head>
     <body>
@@ -20,6 +27,7 @@
     </body>
 
 </html>
+
 
 
 
