Change stylesheet and add inline CSS styles
Updated stylesheet link and added inline styles.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./index-styles.css" /> 
+        <link rel="stylesheet" href="./styles.css" />
+        <style>
+            body {
+  background-color: #8ec2fa;
+  font-color: antiquewhite;
+}
+        </style>
         <title>Berdan's Portfolio</title> 
     </head>
     <body>
