Add stylesheet link to mycv.html

--- a/mycv.html
+++ b/mycv.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Berdan Sarıgöl's CV</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <img src="../assets/images/IMG_20240627_213331.jpg" height="200" alt="Me">
