--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,12 @@
-<h1>Contact Me</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+  <body>
+    <h1>Contact Me</h1>
 <p>Email: berdan819@gmail.com</p>
 <hr/>
 <p>Address: Bodrum, Turkey</p>
@@ -8,3 +16,4 @@
 <a href="https://x.com/KirkeninMistik">Blog's Twitter</a>
 <hr/>
 <a href="https://github.com/rlkoavis1998">GitHub</a>
+  </body>
